# nemo

./: .gitignore  .travis.yml  BLUEPRINT.md  BLUEPRINT.nm  BLUEPRINT.rst  BLUEPRINT.txt  BUGS.md  CMakeLists.txt  LICENSE  MOBILIS.txt  Makefile  Makefile.in  README.md  README.rst  array.c  ast.c  ast.h  builtin.c  cast.c  cast.h  config.h.in  configure  configure.ac  context.h  count_params.h  debug.c  debug.h  dev.c  error.c  error.h  example.nm  exec.c  exec.h  file.c  float.c  free.c  free.h  funcs.c  funcs.h  gc.c  (+60 more)
examples/: 99-bottles.nm  99_bottles.nm  hello_world.nm
examples/infinite_loops/: while.nm
ext/: getopt.c
include/: cast.h  exec.h  free.h  gen.h  handy.h  lemon.h  nemo.h  nodes.h  predef.h  vars.h  yystype.h
lib/: CMakeLists.txt  Makefile  Makefile.in  Math.c
stylesheets/: main.css
t/: basic.nm  functions.nm  iters.nm  runner.sh  strings.nm
test/: arrays.nm  basic.nm  builtin.nm  loops.nm  namespace.nm  runner.sh
